--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>Welcome to AccioJob</h1>
     <script type="text/javascript" src="./script.js">
 </script>
 
